# git-versioned

./: .detect-secrets.scan.json  .editorconfig  .env.example  .git_archival.txt  .gitignore  .yamllint  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  NOTICE  README.md  SECURITY.md  SUPPORT.md  cst.yaml  dev  docker-compose.yml  llms-full.txt  llms.txt  mkdocs.yml  nightly  pyproject.toml  scratch.py  scratch2.py  taplo.toml  version.py  versions.json  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  paths-filter.yml  (+1 more)
examples/general/: .gitignore  README.md  pyproject.toml  test_example.py
examples/general/advanced/api_usage/: README.md  main.py  test_example.py
examples/general/advanced/custom_config/: README.md  main.py  test_example.py
examples/general/advanced/docker_build_args/: Dockerfile  README.md  main.py  test_docker_build_args.py
examples/general/advanced/regex_replacement/: README.md  main.py  test_example.py
examples/general/src/webapp/: __init__.py  main.py
examples/hatch_pyproject_toml/: .gitignore  README.md  pyproject.toml  test_example.py
examples/hatch_pyproject_toml/src/hatch_pyproject_toml/: __init__.py  main.py
examples/hatchling/: .gitignore  README.md  pyproject.toml  test_example.py
examples/hatchling-hatch-vars/: README.md  pyproject.toml
examples/hatchling-hatch-vars/src/hatchling_hatch_vars/: __init__.py  main.py
examples/hatchling-tool-table/: README.md  pyproject.toml
examples/hatchling-tool-table/src/hatchling_tool_table/: __init__.py  main.py
examples/hatchling-version-branch/: README.md  pyproject.toml
examples/hatchling-version-branch/src/hatchling_version_branch/: __init__.py  main.py
examples/hatchling-version-commits/: README.md  pyproject.toml
examples/hatchling-version-commits/src/hatchling_version_commits/: __init__.py  main.py
examples/hatchling-version-file/: README.md  pyproject.toml
examples/hatchling-version-file/src/hatchling_version_file/: __init__.py  main.py  version.py
examples/hatchling-version-function/: README.md  pyproject.toml
examples/hatchling-version-function/src/hatchling_version_function/: __init__.py  main.py
examples/hatchling-version-tags/: README.md  pyproject.toml
examples/hatchling-version-tags/src/hatchling_version_tags/: __init__.py  main.py
examples/hatchling/advanced/custom_config/: .gitignore  README.md  pyproject.toml  test_example.py
examples/hatchling/advanced/custom_config/src/hatchling_custom_config/: __init__.py  main.py
examples/hatchling/advanced/docker_overrides/: .gitignore  Dockerfile  README.md  pyproject.toml  test_example.py
examples/hatchling/advanced/docker_overrides/src/hatchling_docker_overrides/: __init__.py  main.py
examples/hatchling/src/hatchling_example/: __init__.py  main.py
examples/maturin/: .gitignore  Cargo.toml  README.md  pyproject.toml  test_example.py
examples/maturin/advanced/custom_config/: .gitignore  Cargo.toml  README.md  pyproject.toml  test_example.py
examples/maturin/advanced/custom_config/src/: lib.rs
examples/maturin/advanced/custom_config/src/maturin_custom_config/: __init__.py  main.py
examples/maturin/advanced/polyglot_overrides/: .gitignore  Dockerfile  README.md  pyproject.toml  test_example.py
examples/maturin/advanced/polyglot_overrides/src/maturin_polyglot_overrides/: __init__.py  main.py
examples/maturin/src/: lib.rs
examples/maturin/src/maturin_example/: __init__.py  main.py
examples/maturin_polyglot_overrides/: .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml  test_example.py
examples/maturin_polyglot_overrides/src/: lib.rs
examples/maturin_polyglot_overrides/src/maturin_polyglot_overrides/: __init__.py  main.py
examples/setuptools/: .gitignore  README.md  pyproject.toml  test_example.py
examples/setuptools-tool-table/: README.md  pyproject.toml
examples/setuptools-tool-table/src/setuptools_tool_table/: __init__.py  main.py
examples/setuptools-version-branch/: README.md  pyproject.toml
examples/setuptools-version-branch/src/setuptools_version_branch/: __init__.py  main.py
examples/setuptools-version-commits/: README.md  pyproject.toml
examples/setuptools-version-commits/src/setuptools_version_commits/: __init__.py  main.py
examples/setuptools-version-file/: README.md  pyproject.toml
examples/setuptools-version-file/src/setuptools_version_file/: __init__.py  main.py
examples/setuptools-version-function/: README.md  pyproject.toml
examples/setuptools-version-function/src/setuptools_version_function/: __init__.py  main.py
examples/setuptools/advanced/custom_config/: .gitignore  README.md  pyproject.toml  test_example.py
examples/setuptools/advanced/custom_config/src/setuptools_custom_config/: __init__.py  main.py
examples/setuptools/advanced/docker_overrides/: .gitignore  Dockerfile  README.md  pyproject.toml  test_example.py
examples/setuptools/advanced/docker_overrides/src/setuptools_docker_overrides/: __init__.py  main.py
examples/setuptools/advanced/setup_cfg/: .gitignore  README.md  setup.cfg  setup.py  test_example.py
examples/setuptools/advanced/setup_cfg/src/setuptools_setup_cfg/: __init__.py  main.py
examples/setuptools/advanced/setup_py/: .gitignore  README.md  setup.py  test_example.py
examples/setuptools/advanced/setup_py/src/setuptools_setup_py/: __init__.py  main.py
examples/setuptools/src/setuptools_example/: __init__.py  main.py
examples/setuptools_pyproject_overrides/: .gitignore  Dockerfile  README.md  pyproject.toml  test_example.py
examples/setuptools_pyproject_overrides/src/setuptools_pyproject_overrides/: __init__.py  main.py
examples/setuptools_pyproject_toml/: .gitignore  README.md  pyproject.toml  test_example.py
examples/setuptools_pyproject_toml/src/setuptools_pyproject_toml/: __init__.py  main.py
examples/setuptools_setup_cfg/: .gitignore  README.md  setup.cfg  setup.py  test_example.py
examples/setuptools_setup_cfg/src/setuptools_setup_cfg/: __init__.py  main.py
(+1969 files in other folders)
