[build-system]
requires = ["hatchling", "gitversioned"]
build-backend = "hatchling.build"

[project]
name = "hatch_pyproject_toml"
dynamic = ["version"]
description = "An example project showcasing GitVersioned integration with Hatchling using pyproject.toml"
readme = "README.md"
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["src/hatch_pyproject_toml"]
artifacts = ["src/hatch_pyproject_toml/version.py"]

[tool.hatch.build.targets.sdist]
artifacts = ["src/hatch_pyproject_toml/version.py"]

[tool.hatch.version]
source = "gitversioned"
output = "src/hatch_pyproject_toml/version.py"
source_type = ["tag"]
