[build-system]
requires = ["hatchling", "gitversioned"]
build-backend = "hatchling.build"

[project]
name = "hatchling_tool_table"
dynamic = ["version"]

[tool.hatch.build.targets.wheel]
packages = ["src/hatchling_tool_table"]

[tool.hatch.version]
source = "gitversioned"

[tool.gitversioned]
version_source = "tags"
build_metadata_enabled = true
