[build-system]
requires = ["hatchling", "gitversioned"]
build-backend = "hatchling.build"

[project]
name = "hatchling_version_branch"
dynamic = ["version"]

[tool.hatch.build.targets.wheel]
packages = ["src/hatchling_version_branch"]

[tool.hatch.version]
source = "gitversioned"

[tool.gitversioned]
version_source = "branch"
