[build-system]
requires = ["hatchling", "gitversioned"]
build-backend = "hatchling.build"

[project]
name = "hatchling_version_file"
dynamic = ["version"]

[tool.hatch.build.targets.wheel]
packages = ["src/hatchling_version_file"]

[tool.hatch.version]
source = "gitversioned"

[tool.gitversioned]
source_type = ["tag"]
output = "src/hatchling_version_file/_version.py"
