[build-system]
requires = ["hatchling", "gitversioned"]
build-backend = "hatchling.build"

[project]
name = "hatchling_version_function"
dynamic = ["version"]

[tool.hatch.build.targets.wheel]
packages = ["src/hatchling_version_function"]

[tool.hatch.version]
source = "gitversioned"

[tool.gitversioned]
version_source = "tags"
version_format = "{ver}"
