[build-system]
requires = ["hatchling", "gitversioned"]
build-backend = "hatchling.build"

[project]
name = "hatchling_version_tags"
dynamic = ["version"]

[tool.hatch.build.targets.wheel]
packages = ["src/hatchling_version_tags"]

[tool.hatch.version]
source = "gitversioned"

[tool.gitversioned]
source_type = ["tag"]
