[build-system]
requires = ["maturin>=1.0,<2.0", "gitversioned"]
build-backend = "gitversioned.plugins.maturin_plugin"

[project]
name = "maturin_polyglot_overrides"
dynamic = ["version"]
description = "An example project showcasing GitVersioned integration with Maturin in a Python/Rust polyglot repo"
readme = "README.md"
requires-python = ">=3.10"

[tool.gitversioned]
output = "src/maturin_polyglot_overrides/version.py"
source_type = ["tag"]

[tool.gitversioned.overrides.cargo]
output = "Cargo.toml"
version_standard = "semver2"
output_strategies = { type = "regex", pattern = """(?ms)^\\[package\\].*?^(\\s*version\\s*=\\s*)(['"])(?P<version>[^'"]+)\\2""" }

[tool.gitversioned.overrides.docker]
output = "Dockerfile"
output_strategies = { type = "regex", pattern = 'ARG VERSION="(?P<version>.*?)"' }
