[build-system]
requires = ["setuptools>=61.0", "gitversioned @ file:///Users/markkurtz/code/github/markurtz/git-versioned"]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools_version_branch"
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.gitversioned]
version_source = "branch"
