[build-system]
requires = ["setuptools>=61.0", "gitversioned"]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools_version_branch"
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.gitversioned]
source_type = ["branch"]
regex_branch = [
    "^release/(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)$",
]
