[build-system]
requires = ["setuptools>=61.0", "gitversioned"]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools_version_commits"
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.gitversioned]
source_type = ["commit"]
regex_commit = ['(?i)^v?(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)']
