[build-system]
requires = ["setuptools>=61.0", "gitversioned"]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools_version_file"
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.gitversioned]
version_source = "tags"
version_file = "src/setuptools_version_file/_version.py"
