[build-system]
requires = ["setuptools>=61.0", "gitversioned"]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools_version_function"
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.gitversioned]
source_type = ["function"]
version_source_function = "setuptools_version_function.main:get_version"
format_main = "{version.major}.{version.minor}.{version.micro}"
