[build-system]
requires = ["setuptools>=64.0.0", "wheel", "gitversioned"]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools_example"
dynamic = ["version"]
description = "A minimal example project showcasing Setuptools integration with GitVersioned"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
