[build-system]
requires = ["setuptools>=64.0.0", "wheel", "gitversioned"]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools_pyproject_toml"
dynamic = ["version"]
description = "An example project showcasing GitVersioned integration with Setuptools using pyproject.toml"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.gitversioned]
output = "src/setuptools_pyproject_toml/version.py"
source_type = ["tag"]
