[build-system]
requires = ["maturin>=1.0,<2.0", "gitversioned"]
build-backend = "gitversioned.plugins.maturin_plugin"

[project]
name = "maturin_custom_config"
dynamic = ["version"]
description = "An advanced example project showcasing Maturin integration with custom GitVersioned configurations"
readme = "README.md"
requires-python = ">=3.10"

[tool.gitversioned]
format_main = "{version.major}.{version.minor}"
format_dev = "dev{ref.distance_from_head}"
auto_increment = { dev = "minor" }
dirty_ignore = ["temp_ignored.txt"]
