[build-system]
requires = ["maturin>=1.0,<2.0", "gitversioned"]
build-backend = "gitversioned.plugins.maturin_plugin"

[project]
name = "maturin_polyglot_overrides"
dynamic = ["version"]
description = "An advanced example project showcasing Maturin integration with polyglot overrides (Cargo.toml and Dockerfile)"
readme = "README.md"
requires-python = ">=3.10"

[tool.gitversioned.overrides.docker]
output = "Dockerfile"
output_strategies = { type = "regex", pattern = 'ARG VERSION="(?P<version>.*?)"' }
