[metadata]
name = setuptools_setup_cfg
description = An advanced example project showcasing GitVersioned integration with Setuptools using setup.cfg
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.0

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10

[options.packages.find]
where = src
